--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.31.0",
     "@tanstack/react-query": "^4.32.0",
     "@tanstack/react-query-devtools": "^4.32.0",
+    "date-fns": "^2.30.0",
     "i": "^0.3.7",
     "npm": "^9.8.1",
     "react": "^18.2.0",
